--- a/apps/book/templates/book/authors/create_author.html
+++ b/apps/book/templates/book/authors/create_author.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="container mt-4">
-    <h2>Register Author</h2>
+    <h1>Register form for author</h1>
     <form method="POST">
         {% csrf_token %}
         {{ form.non_field_errors }}
