--- a/apps/book/templates/book/books/available_book_detail.html
+++ b/apps/book/templates/book/books/available_book_detail.html
@@ -30,11 +30,11 @@
             <!-- Right side information -->
             <div class="col-md-7">
                 <div class="card-body pt-6 mt-3">
-                    <h2 class="card-title mb-3 fw-semibold">{{ object }}</h2>
+                    <h1 class="card-title fs-2 mb-3 fw-semibold">{{ object }}</h1>
                     <p class="text-muted mb-2"> Published: {{ object.publication_date }}</p>
                     <p class="orange-txt mb-4"><strong>Authors:</strong> {{ object.get_authors }}</p>
 
-                    <h5><strong>Description</strong></h5>
+                    <h2 class="fs-5"><strong>Description</strong></h2>
                     <p class="card-text">{{ object.description }}</p>
 
                     <!--  Buttons -->
