--- a/apps/book/templates/book/books/create_book.html
+++ b/apps/book/templates/book/books/create_book.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="container mt-4">
-    <h2>Register Form</h2>
+    <h1>Register form for book</h1>
     <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.non_field_errors }}
