--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -9,7 +9,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-8 mt-3 offset-md-2">
-      <h3>{% trans "Sign Up" %}</h3>
+      <h3>{% trans "Register" %}</h3>
 
       <p>{% blocktrans %}Welcome to Bookaroo. Do you already have an account? Then please <a href="{{ login_url }}">sign
           in</a> instead.{% endblocktrans %}
@@ -24,7 +24,7 @@
         {% if redirect_field_value %}
         <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
         {% endif %}
-        <button class="btn btn-signup secondary-btn right" type="submit">{% trans "Sign Up" %} &raquo;</button>
+        <button class="btn btn-signup secondary-btn right" type="submit">{% trans "Register" %} &raquo;</button>
       </form>
     </div>
   </div>
