Include ER Diagrama to Readme file

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,7 +6,7 @@
     --bg-primary: #f9f9f9;
     --bg-secondary: #f9f6f1;
 
-    --primary-colour: #6f4e37;
+    --primary-colour: #60422e;
     --secondary-colour: #aa9581;
 
     --text-primary: #3d5d78;
