Update README.md to include ERD and technical flowchart

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,7 +9,7 @@
     --primary-colour: #60422e;
     --secondary-colour: #aa9581;
 
-    --text-primary: #3d5d78;
+    --text-primary: #30465a;
     --text-secondary: #aebacd;
 
     --btn-primary: #b08d6f;
