--- a/templates/base.html
+++ b/templates/base.html
@@ -134,11 +134,9 @@
                                             class="fa fa-table me-2"></i> Available
                                         Books</a></li>
                                 <li><a class="dropdown-item" href="{% url 'book:my_reservations' %}"><i
-                                            class="fa fa-table me-2"></i> Reserved
-                                        Books</a></li>
-                                <li><a class="dropdown-item" href="{% url 'book:expired_reservations' %}"><i
-                                            class="fa fa-table me-2"></i> Expired
-                                        Reservations</a></li>
+                                            class="fa fa-table me-2"></i> Reserved Books</a>
+                                </li>
+
                             </ul>
                         </li>
 
