--- a/templates/base.html
+++ b/templates/base.html
@@ -182,11 +182,12 @@
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end">
                         {% if request.user.is_authenticated %}
-                        <li>
+                        <!-- For future consideration -->
+                        <!-- <li>
                             <a class="dropdown-item" href="{% url 'account_change_password' %}">
                                 <i class="fa fa-user me-2"></i> Change Password
                             </a>
-                        </li>
+                        </li> -->
                         <li>
                             <hr class="dropdown-divider">
                         </li>
